platform changes wednesday

--- a/javascript/profile-package/user-card.handlebars
+++ b/javascript/profile-package/user-card.handlebars
@@ -12,7 +12,7 @@
           </div>
           {{/if}}
           <div>
-              <span>Joined <abbr class="timeago" title="{{dateJoined}}">{{dateJoined}}</abbr></span>
+              <span>Lid sinds <abbr class="timeago" title="{{dateJoined}}">{{dateJoined}}</abbr></span>
           </div>
           <div class="basic-stats clearfix">
               <div class="simple-stat">
