--- a/javascript/profile-package/username-picker.handlebars
+++ b/javascript/profile-package/username-picker.handlebars
@@ -22,7 +22,7 @@
         </div>
         <div class="row username-row">
             <div class="labels">
-                <label for="username">Username:</label>
+                <label for="username">Gebruikersnaam:</label>
             </div>
             <div class="inputs">
                 <input type="text" value="{{username}}" class="username" id="username"><span class="sidenote"></span>
@@ -30,13 +30,13 @@
                     Jouw gebruikersnaam zal verschijnen in jou Khan Academie adres.
                 </p>
                 <p class="input-description">
-                    http://www.khanacademy.org/profile/<span class="example-username">{{username}}</span>
+                    http://www.khanacademie.nl/profile/<span class="example-username">{{gebruikersnaam}}</span>
                 </p>
             </div>
         </div>
     </div>
 </div>
 <div class="modal-footer" style="text-align: right;">
-    <input id="cancel-profile-info" type="button" class="simple-button" value="Cancel">
-    <input id="save-profile-info" type="button" class="simple-button green" value="Save">
+    <input id="cancel-profile-info" type="button" class="simple-button" value="Annuleer">
+    <input id="save-profile-info" type="button" class="simple-button green" value="Bewaar">
 </div>
