--- a/templates/viewclassprofile.html
+++ b/templates/viewclassprofile.html
@@ -34,7 +34,7 @@
 </span>
 {% endblock pagesubmenu %}
 
-{% block statistics_title %}Class Statistics{% endblock statistics_title %}
+{% block statistics_title %}Klas statistieken{% endblock statistics_title %}
 
 {% block graph_accordion %}
 <div id="high-level-class-stats">
