--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,10 +12,42 @@
 	#page_sub_nav { display: none; }
 	td { vertical-align: top; }
 	.ui-tooltip, .qtip { max-width: 200px; }
-  .rssentry { 
+  .blog-entry { 
     margin-top:20px;
   }
-  .rssdate {
+  .blog-title { 
+    font-size: 16px;
+    color: #26a8e0;
+    display: block;
+  }
+  .begin-button {
+    width: 340px;
+    height: 100%;
+    background: -webkit-linear-gradient(top, #26a8e0 40%,#8cc4eb 100%);
+    border-radius: 8px;
+    font-size: 30px;
+    display: block;
+    text-align: center;
+    vertical-align: middle;
+    margin-left:auto;
+    margin-right:auto;
+    box-shadow: 5px 5px 5px grey;
+    text-shadow: 0px 1px 1px black;
+    color: white;
+    padding: 30px;
+    margin-top: 16px;
+  }
+  a.begin-button:hover {
+    box-shadow: 3px 3px 4px grey;
+    color: white;
+    text-shadow: 0px 0px 2px black;
+    text-decoration: none;
+  }
+  a.begin-button:visited {
+    color: white;
+    text-decoration: none;
+  }
+  .blog-date {
     font-color: gray;
   }
   #homepage-left-col {
@@ -30,8 +62,6 @@
 	  padding-bottom: 10px;
 	  text-align: center;
   }
-
-
   #homepage-right-col {
     float: right;
     max-width: 40%;
@@ -42,15 +72,8 @@
     width: 325px;
     height: 186px;
     display: block;
-  }
-  #spare-leaves {
-    background:url('images/missing-leaf.png') 0px 0px;
-    width:344px;
-    height:313px;
-    position:relative;
-    top:-17px;
-    left:158px;
-    z-index:10;
+    margin-left: auto;
+    margin-right: auto;
   }
   #homepage-text {
     margin-left: 0px;
@@ -63,6 +86,21 @@
   #social-actions {
     margin-bottom: 26px;
     margin-top: 33px;
+  }
+  #social-actions table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+  }
+  td.social-action { 
+    text-align: center;
+    display: inline-block;
+    margin-right: auto;
+    width: 100px;
+  }
+  td.social-action.gplus { 
+    padding-left: 15px;
+    width: 85px;
   }
 </style>
 {% endblock pagecss %}
@@ -92,11 +130,11 @@
                     <td class="social-action">
                         <a href="http://twitter.com/share" class="twitter-share-button" data-counturl="http://www.khanacademie.nl" data-url="http://www.khanacademie.nl" data-text="Kijk. Oefen. Leer bijna alles online, en gratis." data-count="horizontal" data-via="khanacademie">Tweet</a>
                     </td>
-                    <td class="social-action">
+                    <td class="social-action gplus">
                         <g:plusone size="medium" href="http://www.khanacademie.nl"></g:plusone>
                     </td>
                     <td class="social-action">
-                        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fkhanacademie&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+                        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fkhanacademie&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
                     </td>
                 </tr>
                 <tr>
@@ -124,15 +162,17 @@
             -->
     
         </div>
+        <a class="begin-button" href="/exercisedashboard">Begin met Oefenen!</a>
+        <br />
         
     </div>
     <div id="homepage-right-col">
         <h3>Laatste Nieuws</h3>
         {% for entry in rssblog %}
-        <div class="rssentry">
-        <span class="rssdate">{{ entry.pub_date|formatdate }}</span>
-        <a href="{{ entry.link }}" target="_blank"><h5>{{ entry.title }}</h5></a><br />
-        <div>{{ entry.description|striptags|truncate }}</div>
+        <div class="blog-entry">
+        <span class="blog-date">{{ entry.pub_date|formatdate }}</span>
+        <a href="{{ entry.link }}" target="_blank"><span class="blog-title">{{ entry.title }}</span></a>
+        <div class="blog-body">{{ entry.description|striptags|truncate }}</div>
         </div>
         {% endfor %}
     </div>
