--- a/templates/coach_resources/toolkit_content/classroom-culture.html
+++ b/templates/coach_resources/toolkit_content/classroom-culture.html
@@ -2,34 +2,35 @@
 
 {% block col1content %}
 		
-	<h1>Creating a positive classroom culture</h1>
+	<h1>Wat heb je nodig?</h1>
 	<hr>
-	<p class="lead">Strategies for creating a classroom culture in which students move at their own pace, take ownership for their learning, and support one another</p>
+	<p> Om deel te nemen zijn de volgende 
+voorzieningen nodig:<br><br>
+Zowel de leraar als de 
+leerlingen moeten de 
+beschikking hebben over een 
+computer met 
+internetverbinding. 
+Om in te loggen op Khan 
+Academie is daarnaast ook 
+een Google- of Facebook 
+account nodig. <br><br>
+Voor het opnemen van video's is 
+daarnaast het volgende nodig: <br>
+- Een computer, tablet of smartboard <br>
+- Paint of ander 
+tekenprogramma.<br>
+- YouTube account (Je Google-account kan hier ook gebruikt worden).<br>
+- Screencast-o-matic (gratis 
+web based programma op www.screencast-o-matic.com) of een ander screencastprogramma.
+ <br><br>Khan 
+Academie kan ook worden gebruikt op 
+een computer, tablet of smartphone. 
+Om in te loggen hebben de leerlingen 
+een Google- of Facebook account 
+nodig.</p>
 	
-	<h3>Beginning of the year</h3>
-	<p><strong>Contracts</strong>: Starting the year with an explicit class contract helps establish norms and set expectations. To cultivate values like <strong>individual improvement</strong>, <strong>hard work</strong>, and <strong>camaraderie</strong>, consider including the following in your contract:</p> 
-	<ul class="bullet">
-		<li>We all learn concepts at different paces</li>
-		<li>We take responsibility for our own learning, and we try our best</li>
-		<li>We help each other out. When someone is struggling with a concept we already know, we’ll help him or her understand it</li>
-	</ul>
-	<p>See an example of a <a href="http://dl.dropbox.com/u/34796456/Khan%20Academy%20Contract.pdf">class contract from Los Altos here.</a></p>
-	
-	<p><strong>Discussions</strong>: When introducing Khan Academy, some teachers encourage students to share their thoughts on how learning on KA will be different than their previous math classes. During this conversation, teachers can correct any misconceptions, identify potential opportunities and challenges, and prompt students to think creatively.</p>
-	<p>This discussion could segue into a class contract (see above). We’ve seen this conversation begin with <a href="http://prezi.com/savnabakcjjt/copy-of-blended-learning-presentation-to-students/">a formal presentation</a>, while other conversations have been informal.  Questions to be covered in such a conversation could include:</p>
-	<ul class="bullet">
-		<li>Think about your previous math classes.  How might your experience be similar or different than another student in this math class?</li>
-		<li>What are some advantages to using Khan Academy?</li>
-		<li>What are some challenges we might face by using Khan Academy? How can we meet those challenges?</li>
-	</ul>
-	
-	<h3>Throughout the year</h3>
-	<p>These strategies can help reinforce and maintain the classroom culture throughout the year.</p>
-	<p><strong>Praise</strong>: We've seen teachers reinforce class values of hard work and individual improvement by regularly complimenting students who put in extra effort or achieve their goals. Some great strategies we've seen: encouraging spontaneous applause from the whole class when a student completes a goal that's been particularly challenging for him/her, having students share accomplishments or challenges from the day or week at the end of class, and praising students for tutoring their peers.</p>
-	<p><strong>Rewarding individual improvement</strong>: Teachers can signal the importance of individual improvement by grading students based on their own goals (at least partly) rather than solely on grade-level standards.</p>
-	<p>Prioritizing individual improvement over grade-based content means that some students may race ahead, while others spend time filling gaps in their knowledge rather than focusing on grade-level standards. In the short term, these students may not perform as well on grade-level assessments but may ultimately become better math students thanks to their strong foundation.</p>
-	
-	<p><a href="{{base_url}}/keys-to-success" class="call-to-action simple-button green">Next: Keys to success →</a></p>
+	<p><a href="{{base_url}}/keys-to-success" class="call-to-action simple-button green">Volgende: Voor leraar en leerling →</a></p>
 	
 {% endblock col1content %}	
 		
