--- a/templates/coach_resources/toolkit_content/first-week.html
+++ b/templates/coach_resources/toolkit_content/first-week.html
@@ -2,42 +2,26 @@
 
 {% block col1content %}
 		
-	<h1>Aan de slag met Khan Academie</h1>
+	<h1>Wat houdt Khan in de klas in?</h1>
 	<hr>
 	
-	<p class="lead">Investing time in KA upfront helps introduce students to the site and identify their knowledge gaps.</p>
-		
-	<p>Below are four ways to start the year with KA. Teachers report that investing time upfront for their students to explore KA was well worth it, as it helped them catch knowledge gaps and familiarize their students with KA.</p>
-	
-	<p><h3>Start at the top</h3></p>
-	<ul class="bullet">
-		<li>Beginning at the top of the knowledge map, students work through exercises for a given time or until they reach a certain point (e.g., grade-level content)</li>
-		<li><strong>Pro: </strong>Identifies knowledge gaps and gives students a chance to review forgotten concepts</li>
-		<li><strong>Con: </strong>Can be time-consuming to reach appropriate level, especially for higher-level math classes</li>
-	</ul>
-	
-	<p><h3>Start with a pre-determined list of exercises and videos</h3></p>
-	<ul class="bullet">
-		<li>Students work through a pre-determined list of exercises for a given amount of time</li>
-		<li><strong>Pro: </strong>Allows teachers to specify which exercises are pre-requisites for the course and target common knowledge gaps</li>
-		<li><strong>Con: </strong>Can be time-consuming for teachers to create list of topics; may not capture all students' knowledge gaps</li>
-	</ul>
-	
-	<p><h3>Take a challenge</h3></p>
-	<ul class="bullet">
-		<li>Students choose a Challenge exercise (e.g., Pre-Algebra, Algebra, Trigonometry) and work through it to identify knowledge gaps</li>
-		<li><strong>Pro: </strong>More efficiently identifies knowledge gaps, especially for students beyond arithmetic</li>
-		<li><strong>Con: </strong>Challenges are more arduous than regular exercises and can overwhelm some students</li>
-	</ul>
-	
-	<p><h3>Set process goals</h3></p>
-	<ul class="bullet">
-		<li>For a given time period, students continuously set goals to complete any 5 exercises or videos</li>
-		<li><strong>Pro: </strong>Students get in habit of setting goals and take ownership of learning</li>
-		<li><strong>Con: </strong>May be harder to identify knowledge gaps</li>
-	</ul>
-	
-	<p>In addition to figuring out how to start your students on KA, you might want to check out resources on <a href="{{base_url}}/keys-to-success">effectively setting up your classroom space, discussing technology rules, and having a dedicated KA notebook</a>. All of these tips and more can be found in <a href="{{base_url}}/keys-to-success">keys to success.</a></p>
+	<p> Het doel van is dat leraren Khan 
+Academie gaan gebruiken in de klas. 
+Leraren en leerlingen gaan dus  
+werken met Khan Academie. De leraar 
+wordt coach van zijn klas en zal (een 
+deel van) zijn lesmateriaal opnemen 
+op video en op Khan Academie 
+plaatsen. Leerlingen kunnen deze 
+video's online bekijken en kunnen aan 
+de slag met de oefeningen op het 
+gebied van rekenen en wiskunde die 
+op Khan Academie beschikbaar zijn. <br>
+<br>
+U kunt in principe gewoon zelfstandig 
+aan de slag gaan. Voor 
+onduidelijkheden of problemen kunt u 
+altijd contact met ons opnemen.</p>
 	
 	<p><a href="{{base_url}}/classroom-culture" class="call-to-action simple-button green">Next: Classroom culture →</a></p>
 
