--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -2,19 +2,19 @@
 
 {% block col1content %}
 
-	<h1>Hoe gebruik ik de gereedschapskist?</h1>
+	<h1>Hoe gebruik ik de toolkit?</h1>
 	<hr>
 		
 	<p class="lead">Als je Khan Academie in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
 	
-	<p>Khan Academie kan op diverse, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze gereedschapskist graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen anderen leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze <a href="{{base_url}}/teacher-faqs"> toevoegt aan onze FAQs</a>!</p> 
+	<p>Khan Academie kan op diverse, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen anderen leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze <a href="{{base_url}}/teacher-faqs"> toevoegt aan onze FAQs</a>!</p> 
 
-	<p>Afhankelijk van hoe jij van plan bent de Khan Academie in jouw klas te gaan gebruiken, zullen verschillende delen van de gereedschapskist voor jou nuttig zijn.</p>
+	<p>Afhankelijk van hoe jij van plan bent de Khan Academie in jouw klas te gaan gebruiken, zullen verschillende delen van de toolkit voor jou nuttig zijn.</p>
 	
-	<img class "image-centered" src="/images/toolkit/implementation-models-2.png"/>
+
 	
-	<p><strong>Aanvullende modellen:</strong> Als je geïnteresseerd bent in het gebruik van Khan Academie als een aanvullend middel, check dan onze sectie over <a href="{{base_url}}/setting-up-accounts">het opzetten van een account</a>, <a href="{{base_url}}/keys-to-success">sleutels tot succes</a>, <a href="{{base_url}}/instructional-strategies">instructionele strategieën</a>, <a href="{{base_url}}/using-data">gebruik van informatie</a>, en onze <a href="{{base_url}}/teacher-faqs">FAQs</a>.</p>
-	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot, gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie op deze manier lees dan vooral ook de sectie over <a href="{{base_url}}/Classroom culture">cultuur in de klas</a>, <a href="{{base_url}}/using-data">het gebruik van informatie</a>, en <a href="{{base_url}}/individualized-units">geïndividualiseerde secties</a>. </p>
+	
+	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot, gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. </p>
 	<p><strong>Toekomstige modellen:</strong> We willen graag samenwerken met leraren die de uitdaging aan willen gaan om met vernieuwende methodes in het onderwijs aan de slag te gaan. De mogelijkheden zijn oneindig, maar onderwerpen die wij hopen terug te zien zijn ideeën over:</p>
 		<ul class="bullet"> 
 			<li>Gemengde (leeftijds)klassen</li>
@@ -25,7 +25,7 @@
 
 	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
 
-	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: onderdelen van deze site →</a></p>
+	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: Toolkit onderdelen →</a></p>
 
 
 {% endblock col1content %}	
