--- a/templates/coach_resources/toolkit_content/keys-to-success.html
+++ b/templates/coach_resources/toolkit_content/keys-to-success.html
@@ -2,50 +2,47 @@
 
 {% block col1content %}
 		
-	<h1>Keys to success</h1>
+	<h1>Voor de leraar en leerling</h1>
 	<hr>
-	<p class="lead">Best practices to get your classroom up and running smoothly</p>
-	
-	<h3>Technology guidelines</h3>
-	<p>Each school has different rules and procedures concerning technology. We encourage teachers to start off the year explaining these rules and procedures and getting appropriate forms signed. Previous teachers have also used this as an opportunity to discuss responsibility with technology (e.g., difference between school/work e‐mail accounts and personal e‐mail accounts, keeping passwords private, etc.).</p>
-		
-	<h3>A dedicated notebook</h3>
-	<p>A math or Khan Academy notebook can help students keep track of scratch work, video notes, goals, and other key information.</p>
+	<p> 
+	<h2>Khan Academie voor leraren</h2><br>
+Het gebruik van Khan Academie door leraren heeft meerdere voordelen. Allereerst kunnen de 
+leraren hun eigen lessen opnemen op video. Het voordeel hiervan is dat een leraar niet 
+steeds dezelfde uitleg hoeft te geven; een goede video kan jaren mee. Daarnaast kunnen 
+leerlingen die moeite hebben met bepaalde stof, of die graag hun geheugen willen opfrissen 
+over bepaalde stof weer teruggrijpen op de video. Natuurlijk kunnen leerlingen de uitleg ook 
+voorafgaand aan de les bekijken, waardoor ze voorbereid zijn en gericht vragen kunnen 
+stellen over hetgeen hen nog niet duidelijks is.  In de klas ontstaat daardoor meer ruimte voor 
+verdiepingen en het geven van ondersteuning. Khan Academie maakt het mogelijk dat 
+leerlingen in hun eigen tempo werken. De oefeningen die zij maken worden automatisch 
+nagekeken en ze krijgen direct feedback over het resultaat. Omdat Khan Academie beschikt 
+over een leerlingvolgsysteem heeft de leraar inzicht in hoe zijn klas ervoor staat: Welke 
+video's ze hebben bekeken, welke oefeningen hebben ze gemaakt, welke stof beheersen ze 
+en welke stof nog niet. Kortom, de leraar weet waar zijn leerlingen mee bezig zijn en kan 
+gericht helpen, precies daar waar dat nodig is.</p>
+<br>
+<h2>Khan Academie voor leerlingen</h2><br>
 
-	<h3>Transparency and accountability</h3>
-        <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/BbDKQ3CX_iY" frameborder="0" allowfullscreen></iframe></span><p>
-	<p>Khan Academy provides students and coaches with detailed and helpful information about how students are learning. We recommend teaching students how to intepret their data so that they can track their progress and identify strengths and areas for improvement. Teachers and parents should be added as their students' coaches so they can hold students accountable, track their progress, and help support their learning.</p>
-	
-	<h3>Goal setting</h3>
-	<p>Setting goals helps students take ownership of their learning and facilitates self-pacing, since students can set goals appropriate to their level. Students can practice making data-driven decisions by basing their goals on their KA data. You can find more info on goal-setting in self-paced units <a href="{{base_url}}/individualized-units"> here</a>.</p>
+Khan Academie heeft verschillende voordelen voor leerlingen:
+Khan Academie genereert een onbeperkt aantal vragen voor leerlingen over diverse reken- 
+en wiskunde onderwerpen. De leerling krijgt direct feedback over of hij of zij het goede 
+antwoord heeft gegeven. Ook kunnen er hints gevraagd worden, wanneer de leerling het 
+antwoord niet direct weet. Leerlingen kunnen daarnaast ten alle tijde de video's met uitleg 
+raadplegen. Wanneer ze wat meer moeite hebben met een bepaald onderwerp kunnen ze de 
+uitlegvideo opnieuw kijken zonder dat ze steeds weer om hulp moeten vragen. Leerlingen die 
+juist geen moeite hebben met een bepaald onderdeel hoeven niet naar de uitleg te luisteren 
+over lesstof die zij al beheersen. Hierdoor kunnen leerlingen op hun eigen tempo werken. Dit 
+betekent dat wanneer zij een bepaald onderdeel onder de knie hebben ze door kunnen met 
+een ander onderwerp waarover ze iets willen leren. 
+Khan Academie biedt ook de mogelijkheid voor leerlingen om in overleg met de docent hun 
+eigen doelen stellen. Hiermee kunnen zij hun eigen schema maken.
+Voor leerlingen is de Khan Academie naast nuttig ook leuk. Khan Academie bevat allerlei 
+elementen van gamification waardoor leerlingen uitgedaagd worden om meer oefeningen te 
+maken en video's te bekijken. Leerlingen kunnen badges winnen en die tentoonstellen in hun 
+prijzenkast waardoor ze anderen kunnen motiveren ook beter hun best te doen.
 
-        <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/FjD8oKwtYcs" frameborder="0" allowfullscreen></iframe></span><p>
-        <h3>Peer tutoring</h3>
-	<p>Peer tutoring helps students who are acting as tutors confirm and deepen their understanding of a particular topic and enables struggling students to get help even if the teacher is unavailable.</p>
-	<p>We recommend teaching students how to help their peers understand concepts, rather than just giving them the answer. We've seen teachers facilitate peer tutoring well by creating 2 columns on the board ("I need help" and "I can help"); students write their names and relevant topics in the appropriate columns and help each other as needed.</p>
-
-	<h3>Active listening</h3>
-        <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/KHi-NbR0NHs" frameborder="0" allowfullscreen></iframe></span><p>
-	<p>Teachers can show students how to actively engage with Khan Academy videos by:</p>
-	<ul class="bullet">
-		<li>leading an active listening lesson. See an example of an active listening lesson from Eastside Prep <a href="http://dl.dropbox.com/u/34796456/Active%20Listening%20Khan%20Academy.docx">here</a> or an active listening handout from Oakland Unity <a href="http://dl.dropbox.com/u/38043945/OaklandUnityViewingGuide.docx">here</a></li>
-		<li>modeling active listening by watching a video and taking notes, stopping and replaying parts that are not clear, etc., so that students can observe the learning and note-taking process</li>
-		<li>encouraging students to pause a video after Sal introduces a problem, try the problem out in their math notebooks, then watch Sal complete the problem. Students can then reflect on their initial and current understanding of the concept</li>
-		<li>having students teach a concept in their own words or draw what their version of a particular video would look like after watching it</li>
-	</ul>	
-
-	<h3>Classroom space</h3>
-	<p>It may be helpful to consider the following questions and tips for setting up a KA classroom:</p>
-	<ul class="bullet">
-		<li>Does the technology (e.g., laptops) need to be charged during class?  How can outlets and extension cords be safely used while allowing for a purposeful seating arrangement?</li>
-		<li>Consider designating certain parts of your room for teacher seminars, projects, peer tutoring, and silent individual work</li>
-		<li>In <a href="{{base_url}}/individualized-units">individualized units</a>, teachers sometimes designate certain parts of the room for different exercises to facilitate peer tutoring and small group lessons</li>
-	</ul>
 	
-	<h3>Involving parents</h3>
-	<p>We encourage students to add their parents/guardians, tutors, siblings, or other mentors as their coaches on Khan Academy. As a coach, parents can access their students' data and more easily support them in their learning. You can find more information on adding coaches <a href="{{base_url}}/setting-up-accounts">here</a>.</p>
-	
-	<p><a href="{{base_url}}/instructional-strategies" class="call-to-action simple-button green">Next: Instructional strategies →</a></p>
+	<p><a href="{{base_url}}/instructional-strategies" class="call-to-action simple-button green">Volgende: Welke informatie krijg ik? →</a></p>
 	
 {% endblock col1content %}	
 		
