--- a/templates/coach_resources/toolkit_content/navigating-the-site.html
+++ b/templates/coach_resources/toolkit_content/navigating-the-site.html
@@ -12,7 +12,7 @@
 	
 
 	
-	<p><a href="{{base_url}}/first-week" class="call-to-action simple-button green">Volgende: Starten met Khan Academie →</a></p>
+	<p><a href="{{base_url}}/first-week" class="call-to-action simple-button green">Volgende: Wat houdt Khan in de klas in? →</a></p>
 
 {% endblock col1content %}	
 		
