--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -130,49 +130,34 @@
 	        <!-- TODO(Matt): transpent-ify the hand-tree image -->
 			<li class="profile-tab"><a href="{{base_url}}" class="tab-link ellipsis no-recolor {% if 'index' == selected_id %}active-tab{% endif %}" rel="profile">
 	            <img src="/images/hand-tree.png" class="profile-tab-avatar">
-	            <span id="profile-tab-link" class="profile-tab-text">Teacher Toolkit</span>
+	            <span id="profile-tab-link" class="profile-tab-text">Leraren toolkit</span>
 	        </a></li>
 	        
 			<li>
-	            <span class="inactive link-section-header">Choosing KA</span>
+	            <span class="inactive link-section-header">Kiezen voor Khan</span>
 	            <ul class="second-tier">
-	                <li><a href="{{base_url}}/how-to-use-this-toolkit" class="tab-link ellipsis no-recolor {% if 'how-to-use-this-toolkit' == selected_id %}active-tab{% endif %}" rel="section-1">How to use this toolkit</a></li>
-	                <li><a href="{{base_url}}/toolkit-sections" class="tab-link ellipsis no-recolor {% if 'toolkit-sections' == selected_id %}active-tab{% endif %}" rel="section-2">Toolkit sections</a></li>
-					<li><a href="{{base_url}}/ka-classrooms" class="tab-link ellipsis no-recolor {% if 'ka-classrooms' == selected_id %}active-tab{% endif %}" rel="section-3">Why Khan Academy?</a></li>
+	                <li><a href="{{base_url}}/how-to-use-this-toolkit" class="tab-link ellipsis no-recolor {% if 'how-to-use-this-toolkit' == selected_id %}active-tab{% endif %}" rel="section-1">Toolkit gebruiken</a></li>
+	                <li><a href="{{base_url}}/toolkit-sections" class="tab-link ellipsis no-recolor {% if 'toolkit-sections' == selected_id %}active-tab{% endif %}" rel="section-2">Toolkit onderdelen</a></li>
+					<li><a href="{{base_url}}/ka-classrooms" class="tab-link ellipsis no-recolor {% if 'ka-classrooms' == selected_id %}active-tab{% endif %}" rel="section-3">Waarom Khan Academie?</a></li>
 	            </ul>
 	        </li>
 	        <li>
-	            <span class="inactive link-section-header">Getting Started</span>
+	            <span class="inactive link-section-header">Aan de slag</span>
 	            <ul class="second-tier">
-	                <li><a href="{{base_url}}/setting-up-accounts" class="tab-link ellipsis no-recolor {% if 'setting-up-accounts' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Setting up a class</a></li>
-	                <li><a href="{{base_url}}/technology" class="tab-link ellipsis no-recolor {% if 'technology' == selected_id %}active-tab{% endif %}" rel="getting-started technology">Technology</a></li>
-	                <li><a href="{{base_url}}/navigating-the-site" class="tab-link ellipsis no-recolor {% if 'navigating-the-site' == selected_id %}active-tab{% endif %}" rel="getting-started navigating">Navigating the Site</a></li>
-	                <li><a href="{{base_url}}/first-week" class="tab-link ellipsis no-recolor {% if 'first-week' == selected_id %}active-tab{% endif %}" rel="getting-started warming">Starting out on KA</a></li-->
+	                <li><a href="{{base_url}}/setting-up-accounts" class="tab-link ellipsis no-recolor {% if 'setting-up-accounts' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Khan in de klas</a></li>
+	                
+	                <li><a href="{{base_url}}/navigating-the-site" class="tab-link ellipsis no-recolor {% if 'navigating-the-site' == selected_id %}active-tab{% endif %}" rel="getting-started navigating">Navigatie op de site</a></li>
+	                <li><a href="{{base_url}}/first-week" class="tab-link ellipsis no-recolor {% if 'first-week' == selected_id %}active-tab{% endif %}" rel="getting-started warming">Wat houdt Khan in de klas in?</a></li-->
 	            </ul>
 	        </li>
 	        <li>
-	            <span class="inactive link-section-header">Class time</span>
+	            <span class="inactive link-section-header">In de klas</span>
 	            <ul class="second-tier">
-	                <li><a href="{{base_url}}/classroom-culture" class="tab-link ellipsis no-recolor {% if 'classroom-culture' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Classroom culture</a></li>
-	                <li><a href="{{base_url}}/keys-to-success" class="tab-link ellipsis no-recolor {% if 'keys-to-success' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Keys to success</a></li>
-	                <li><a href="{{base_url}}/instructional-strategies" class="tab-link ellipsis no-recolor {% if 'instructional-strategies' == selected_id %}active-tab{% endif %}" rel="getting-started documents">Instructional strategies</a></li>
-	                <li><a href="{{base_url}}/different-learners" class="tab-link ellipsis no-recolor {% if 'different-learners' == selected_id %}active-tab{% endif %}" rel="getting-started technology">Different learners</a></li>
-	                <li><a href="{{base_url}}/using-data" class="tab-link ellipsis no-recolor {% if 'using-data' == selected_id %}active-tab{% endif %}" rel="getting-started technology">Using data</a></li>
-	            </ul>
-	        </li>
-	        <li>
-	            <span class="inactive link-section-header">Curriculum</span>
-	            <ul class="vertical-tab-list second-tier">
-	                <li><a href="{{base_url}}/individualized-units" class="tab-link no-recolor {% if 'individualized-units' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Individualized units</a></li>
-	                <li><a href="{{base_url}}/projects" class="tab-link no-recolor {% if 'projects' == selected_id %}active-tab{% endif %}" rel="projects">Projects</a></li>
-                        <li><a href="/commoncore" target="_blank" class="tab-link no-recolor {% if 'commoncore' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Common Core <img width=12px src="/images/newtab.png"></a></li>
-
-	            <span class="inactive link-section-header">Other resources</span>
-	            <ul class="second-tier">
-                        <li><a href="http://khanacademy.desk.com/customer/portal/topics/189393-khan-academy-in-the-classroom/articles" target="_blank" class="tab-link no-recolor {% if 'teacher-faqs' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Teacher FAQs <img width=12px src="/images/newtab.png"></a></li>
-	                <li><a href="/coach/schools-blog" class="tab-link ellipsis no-recolor {% if 'schools-blog' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Schools Blog</a></li>
-	            </ul>
-	        </li>
+	                <li><a href="{{base_url}}/technology" class="tab-link ellipsis no-recolor {% if 'technology' == selected_id %}active-tab{% endif %}" rel="getting-started technology">Wat heb je nodig?</a></li>
+	                <li><a href="{{base_url}}/keys-to-success" class="tab-link ellipsis no-recolor {% if 'keys-to-success' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Voor leraar en leerling</a></li>
+	                <li><a href="{{base_url}}/instructional-strategies" class="tab-link ellipsis no-recolor {% if 'instructional-strategies' == selected_id %}active-tab{% endif %}" rel="getting-started documents">Welke informatie krijg ik?</a></li>
+	                
+	          
 			
 			
 	    </ul>
