--- a/templates/viewclassprofile.html
+++ b/templates/viewclassprofile.html
@@ -80,7 +80,7 @@
         <li>
             <a href="/class_profile/exercise-progress-over-time" class="graph-link graph-link-header header ">Periodieke Voortgang Vaardigheden</a>
             <div class="accordion-content">Laat zien hoeveel vaardigheden jouw student heeft afgerond binnen een bepaalde periode.<br /><br />
-                <span class="instructions">Highlight een<a href="#" class="highlight-section show-students-highlight">specifieke student</a> of een <a href="#" class="highlight-section show-exercises-highlight">bepaalde vaardihheid</a>.</span><br />
+                <span class="instructions">Licht een<a href="#" class="highlight-section show-students-highlight">specifieke student</a> of een <a href="#" class="highlight-section show-exercises-highlight">bepaalde vaardigheid uit</a>.</span><br />
 
                 <div id="students-highlight" class="vertical-choice-container" style="display:none;">
                     <ul>
