--- a/templates/coach_resources/toolkit_content/instructional-strategies.html
+++ b/templates/coach_resources/toolkit_content/instructional-strategies.html
@@ -2,118 +2,48 @@
 
 {% block col1content %}
 		
-	<h1>Instructional strategies</h1>
-	<hr>
-	<p class="lead">Strategies to help meet each student's individual needs in a dynamic classroom environment</p>
+	<h1>Welke informatie kan je opvragen?</h1>
 	
-	<p>In an ideal Khan Academy classroom, students are not all silently working on laptops. Instead, classrooms are dynamic, social, and joyful! A few students may attend a seminar with the teacher while others work on a project; other students tutor their peers while some work alone. Every day is different, but there are some common elements that make this work well:</p>
+	<p><h4> Khan Academie houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
+oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
+informatie die u kunt opvragen.</h4>
+
+<h4>Het voortgangsoverzicht</h4>
+Het voortgangsoverzicht maakt het mogelijk direct te 
+zien hoe de klas presteert bij een bepaald onderwerp 
+en met welke onderdelen zij worstelen. Het 
+filtersysteem maakt het mogelijk in te zoomen op een 
+bepaalde leerling.<br><br>
+<h4>Het dagelijkse activiteiten overzicht</h4>
+Met het dagelijkse activiteiten overzicht kunt u precies 
+zien waar leerlingen op een bepaald moment aan 
+werken.<br><br>
+<h4>Samenvatting voortgang</h4>
+De samenvatting voortgang biedt u de mogelijkheid in 
+te zoomen op een specifiek onderwerp. U kunt 
+precies zien hoe uw klas dit onderwerp beheerst.<br><br>
+<h4>Doelen</h4>
+Door op doelen te klikken ziet u meteen welke doelen uw 
+leerlingen voor zichzelf hebben gesteld.<br><br>
+<h4>Welke informatie kunt u opvragen?</h4>
+Khan Academie houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
+oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
+informatie die u kunt opvragen.<br><br>
+<h4>Focus</h4>
+Onder focus ziet u precies op welke oefeningen en 
+video's uw leerlingen zich focussen. Doordat u inzicht 
+krijgt in waar zij hun tijd aan besteden kunt u hen 
+gericht sturen waar u denkt dat dit nodig is.<br><br>
+<h4>Activiteiten overzicht</h4>
+Geeft inzicht in waar leerlingen gedurende een 
+bepaalde periode aan gewerkt hebben. 
+Prestaties
+U kunt precies zien welke badges uw leerlingen hebben 
+behaald.</p>
 	
-	<ol class="number">
-		<li>Strong classroom management</li>
-		<li>Clear expectations for each student for the entire class period</li>
-		<li>Strategic use of classroom space</li>
-	</ol>
 	
-	<p>With these three elements in your classroom, use the instructional strategies below when appropriate for your students.</p>
 	
-	<h3>1-on-1 (Teacher to student)</h3>
-	<p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/igKzAD8_GHk" frameborder="0" allowfullscreen></iframe></span>
-		Use when…</p>
-	<ul class="bullet">	
-		<li>You see a student has been struggling based on his/her data</li>
-		<li>You want to provide additional guidance and motivation</li>
-		<li>You want to check in on a student’s individual progress</li>
-		<li>You want to set goals and acknowledge accomplishments</li>
-	</ul>
-	
-		
 
-	<p>Examples of implementation:</p>
-	<ul class="bullet">
-		<li>Look at a student's answer history on an exercise on which he/she is struggling, diagnose the errors or misconceptions, and prompt the student to discover the answer</li>
-		<li>Use the student’s individual KA data reports to review goals, discuss how the student has spent his/her time on KA, or talk about other relevant topics</li>
-	</ul>
-
-
-	<h3>Peer to peer</h3>
-	<p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/FjD8oKwtYcs" frameborder="0" allowfullscreen></iframe></iframe></span>
-		Use when…</p>
-	<ul class="bullet">
-		<li>A student is struggling with a topic that another is proficient in, and you're busy helping someone else</li>
-		<li>You want to enable many levels of differentiation in the class</li>
-		<li>Students start to plateau when working on their own</li>
-		<li>You want to reinforce students' knowledge by having them explain concepts to others</li>
-	</ul>	
-
-	<p>Examples of implementation:</p>
-	<ul class="bullet">
-		<li>Use the progress summary to pair up students</li>
-		<li>A classroom board that has two columns ("I need help with…" and "I can help with…") enables students to reach out and help each other</li>
-	</ul>	
-
-
-	<h3>Small groups</h3>
-	<p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/uaFPgVsrvMQ" frameborder="0" allowfullscreen></iframe></span>
-		Use when…</p>
-	<ul class="bullet">
-		<li>You want to tailor a lesson to meet the needs of a specific group of students</li>
-	</ul>
-
-
-	<p>Examples of Implementation:</p>
-	<ul class="bullet">
-		<li>Use the progress summary to figure out which students need a seminar to reinforce certain concepts</li>
-		<li>Create groups based on skill-level and allow each group to work together on the concept with which they are struggling</li>
-		<li>Create mixed-ability groups with “experts” in each and have the “experts” to guide their peers in learning specific concepts</li>
-	</ul>	
-
-	<h3>Projects</h3>
-	<p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/6musH9V3R6w" frameborder="0" allowfullscreen></iframe></span>
-		Use when…</p>
-	<ul class="bullet">
-		<li>You want students to apply the concepts mastered in KA and deepen their understanding</li>
-		<li>You want to develop real-world skills in leadership, teamwork, and problem solving</li>
-	</ul>	
-
-	<p>Examples of Implementation:</p>
-	<ul class="bullet">
-		<li>Using class data, create groups based on skill level and have each group work on a different project</li>
-		<li>When students finish a set of KA exercises, have them start a related project. You can prepare several projects ahead of time and have students complete them when ready</li>
-	</ul>	
-
-
-	<h3>Stations</h3>
-	<p>Use when...</p>
-	<ul class="bullet">
-		<li>You want to focus on a small group of students at a time</li>
-		<li>You want students to apply the concepts mastered in KA and deepen their understanding</li>
-		<li>You want to re-invest students in using KA</li>
-	</ul>
-
-
-	<p>Examples of Implementation:</p>
-	<ul class="bullet">
-		<li>Create different stations that students rotate through during the class period (e.g., Station 1: watching KA videos, Station 2: working on a group project or challenge, Station 3: completing exercises, Station 4: small group with teacher)</li>
-	</ul>	
-
-
-	<h3>Energizers</h3>
-	<p>Use when…</p>
-	<ul class="bullet">
-		<li>You want to give students an opportunity to show off their math skills</li>
-		<li>You want to re-invest students in math/KA</li>
-	</ul>	
-
-
-	<p>Examples of Implementation:</p>
-	<ul class="bullet">
-		<li><strong>“Rocket Runs”</strong><br>
-		Class is divided into teams at teacher’s discretion (e.g., split the room in half).  Teacher chooses an exercise based on dashboard data or students each choose an exercise.  One team is given 3 minutes to earn as many energy points as possible while other teams watch.  Teacher projects dashboard data showing average energy points earned in real time. Repeat for all teams. The team with most points wins. (Thanks to the LASD teachers for this!)</li>
-		<li><strong>Class vs. Class</strong><br>
-		Charts that track the amount of energy points earned by class are kept and updated daily or weekly.  The class with the highest amount of energy points by the end of the week wins.  Energy points should be measured and reset every week so that classes stay invested.</li>
-	</ul>	
-	
-	<p><a href="{{base_url}}/different-learners" class="call-to-action simple-button green">Next: Different learners →</a></p>
 	
 {% endblock col1content %}	
 		
