--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -151,12 +151,11 @@
         </div>
         <div id="homepage-text" class="visited-no-recolor">
             <p>
-                <b><i>Welkom op de site van de Nederlandse Khan Academie.(Bètaversie)<br> Wij zijn op een missie om jou te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo.</b><br><br> 
-                Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel gesteld alle bestaande oefeningen voor het einde van 2012 vertaald te hebben naar het Nederlands en deze in te delen volgens de referentieniveaus van Meijerink. 
-                Daarnaast gaan er nieuwe oefeningen toegevoegd worden en worden alle oefeningen van video-uitleg voorzien.</i><br><br>
+                <b><i>Welkom op de site van de Nederlandse Khan Academie. (Bètaversie)<br> Wij zijn op een missie om jou te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo.</b><br><br> 
+                Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel gesteld alle oefeningen die op dit moment op de website staan rond nieuwjaar vertaald te hebben naar het Nederlands en bij elke video een oefening te plaatsen. 
+                Vanaf 2013 gaan er nieuwe oefeningen toegevoegd worden en worden de oefeningen ingedeeld volgens de referentieniveaus van Meijerink. Ook komt er een mogelijkheid om de bestaande video's te vervangen door eigen gemaakte video's. Wij geloven namelijk in de kracht van onderwijzers en willen samen een krachtig platform maken.</i><br><br>
                  
-                <I><SMALL>Deelnemers die reeds actief waren op de oude site kunnen deze nog steeds bereiken op: <a href="http://oud.khanacademie.nl">oud.khanacademie.nl</a>
-                Deze site wordt echter niet meer up-to-date gehouden, daarom raden wij jullie aan om zo snel mogelijk over te stappen naar de nieuwe omgeving.</SMALL></I></b><br><br>
+    
                 <!--
             <div>
                 <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
