--- a/templates/profiles/class_time_graph.html
+++ b/templates/profiles/class_time_graph.html
@@ -3,7 +3,7 @@
 {% block graph_content %}
 
 {% if is_graph_empty %}
-    <div class="graph-notification">There isn't any class activity for this date.</div>
+    <div class="graph-notification">Er is geen activiteit op deze datum (geweest).</div>
 {% endif %}
 
 <script>
@@ -49,7 +49,7 @@
             },
             yAxis: {
                 title: {
-                    text: 'Time Spent (Minutes)'
+                    text: 'Tijd besteed (Minuten)'
                 },
                 plotLines: [{
                     value: 0,
