--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -69,7 +69,7 @@
 						</li>
 						<li>
 							<input type="radio" name="issue-type" id="issue-hard">
-							<label for="issue-hard">Ik ben gefrustreed (leg uit waarom) of dit is te moeilijk</label>
+							<label for="issue-hard">Ik ben gefrustreerd (leg uit waarom) of dit is te moeilijk</label>
 						</li>
 						<li>
 							<input type="radio" name="issue-type" id="issue-not-showing">
